database migrated to mongoDB from postgressql

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 GOOGLE_CLIENT_ID=133070844599-2sc35av0cuutnoe0kt13r7gufqtveefp.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+AUTH_SECRET=secret1234jkl
