--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:0vzsuZysjpIAbNlbzkKo@containers-us-west-54.railway.app:7438/railway"
+DATABASE_URL="mongodb+srv://zapit:zapit-backend@zapit.fm1ijqg.mongodb.net/posts?retryWrites=true&w=majority"
